--- a/kuka_arm/CMakeLists.txt
+++ b/kuka_arm/CMakeLists.txt
@@ -144,7 +144,6 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/kuka_arm_node.cpp)
-add_executable(moveit_demo src/moveit_demo.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -155,12 +154,11 @@ add_executable(moveit_demo src/moveit_demo.cpp)
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(moveit_demo ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(moveit_demo
-  ${catkin_LIBRARIES}
-)
+# target_link_libraries(moveit_demo
+#  ${catkin_LIBRARIES}
+#)
 
 #############
 ## Install ##
